# haskell-for-newbies

./: .ghcid  .gitignore  .replit  APrelude.hs  CHANGELOG.md  Main.hs  Pets.hs  Substitution.hs  Text.hs  flake.nix  ghci_wrapper.sh  learningHaskell.cabal  replit.nix
Assignments/: Pets.hs  Substitution.hs  Text.hs
app/: HomeAccounting.hs  Main.hs
src/: APrelude.hs  Assignment.hs  Data.hs  Finances.hs  Pets.hs  Substitution.hs  Text.hs  Utils.hs
src/Assignments/: Data.hs  Finances.hs  HomeAccounting.hs  Intro.md  Pets.hs  Polymorphism.hs  Rec.hs  SaveFishes.hs  Substitution.hs  Text.hs
src/Finances/: Types.hs
