cabal-version:      2.4
name:               learningHaskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


common common-lang
  ghc-options:
    -Weverything
    -Wall
    -fprint-explicit-foralls
    -fprint-explicit-kinds

    -- -Wall -Wcompat -Wincomplete-uni-patterns
    -- -Wmissing-export-lists -Wincomplete-record-updates
    -- -Wmissing-deriving-strategies
    -- -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -- -fprint-explicit-kinds

  build-depends:      base
  default-extensions:
    NoStarIsType
    -- BangPatterns
    -- BinaryLiterals
    -- ConstrainedClassMethods
    ConstraintKinds
    -- DataKinds
    -- DeriveAnyClass
    -- DeriveDataTypeable
    -- DeriveFoldable
    -- DeriveFunctor
    -- DeriveGeneric
    -- DeriveLift
    -- DeriveTraversable
    -- DerivingStrategies
    -- DerivingVia
    -- DoAndIfThenElse
    -- DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    -- EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    -- FlexibleContexts
    -- FlexibleInstances
    -- ForeignFunctionInterface
    -- GADTSyntax
    -- GeneralisedNewtypeDeriving
    -- HexFloatLiterals
    -- ImplicitPrelude
    -- ImportQualifiedPost
    -- InstanceSigs
    -- KindSignatures
    -- LambdaCase
    NoMonomorphismRestriction
    -- MonomorphismRestriction
    -- MultiParamTypeClasses
    -- NamedFieldPuns
    -- NamedWildCards
    NumericUnderscores
    -- OverloadedStrings
    -- OverloadedRecordDot
    PartialTypeSignatures
    -- PatternGuards
    -- PolyKinds
    -- PostfixOperators
    -- RankNTypes
    -- RelaxedPolyRec
    ScopedTypeVariables
    -- StandaloneDeriving
    -- StandaloneKindSignatures
    -- TupleSections
    -- TypeApplications
    -- TypeFamilies
    -- TypeOperators
    -- TypeSynonymInstances
    -- UndecidableInstances
    -- ViewPatterns

  default-language:   Haskell2010

library learningHaskell-lib
    import: common-lang
    exposed-modules:
      Assignments.Pets
      Assignments.Substitution
      Substitution
      Pets
      APrelude
 
    -- Modules included in this plibrary but not exported.
    other-modules: 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: containers, random, time
    hs-source-dirs:   src

executable learningHaskell
    main-is:          Main.hs
    ghc-options: -threaded -with-rtsopts=-N
    
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, learningHaskell-lib
    -- ^>=4.12.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
